--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
-  text-align: center;
+header {
+  padding: 64px 16px 0;
+  display: flex;
+  justify-content: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header > div {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 24px;
+  position: relative;
+  width: 100%;
+  max-width: 736px;
+}
+header > div > button {
+  position: absolute;
+  top: -22.5px;
+  right: 0;
+  cursor: pointer;
+}
+header > div > button:hover #svg-bg {
+  fill: #F9FAFB;
+}
+#profile__img {
+  width: 88px;
+  height: 88px;
+  object-fit: contain;
+  border-radius: 50%;
+}
+#twitter {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: calc(28 / 18);
+  color: #101828;
+  text-align: center;
+}
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  padding: 32px 16px 56.55px;
+}
+#my_links {
+  width: 100%;
+  max-width: 1152px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+#my_links > a {
+  width: 100%;
+  height: 68px;
+  background: #EAECF0;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  border: 1px solid #EAECF0;
+  border-radius: 8px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: calc(20 / 14);
+  color: #101828;
 }
-
-.App-link {
-  color: #61dafb;
+#my_links > a:hover {
+  background: #D0D5DD;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#socials {
+  width: 100%;
+  max-width: 1216px;
+  gap: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 24px 24px 0;
+}
+footer {
+  padding: 32px 16px;
+  display: flex;
+  justify-content: center;
+}
+footer > div {
+  padding-top: 37.24px;
+  width: 100%;
+  max-width: 1216px;
+  border-top: 1px solid #EAECF0;
+  display: flex;
+  flex-direction: column;
+  gap: 16.21px;
+}
+footer img.foot-logo-lg {
+  display: none;
+}
+footer img.foot-logo-sm {
+  display: block;
+}
+p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: calc(20 / 14);
+  color: #667085;
 }
