--- a/src/App.css
+++ b/src/App.css
@@ -18,14 +18,50 @@ header > div > button {
   right: 0;
   cursor: pointer;
 }
+#h-ic-mb {
+  display: block;
+}
+#h-ic-lg {
+  display: none;
+}
 header > div > button:hover #svg-bg {
   fill: #F9FAFB;
 }
-#profile__img {
+#profile {
+  position: relative;
   width: 88px;
   height: 88px;
-  object-fit: contain;
   border-radius: 50%;
+  overflow: hidden;
+}
+#profile__img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+#overlay {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(52, 64, 84, 0.75);
+  z-index: 99;
+}
+#profile > button {
+  display: none;
+  position: absolute;
+  z-index: 999;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  bottom: 5px;
+}
+#profile:hover #overlay,
+#profile:hover > button {
+  display: block;
+  cursor: pointer;
 }
 #twitter {
   font-weight: 700;
@@ -94,9 +130,74 @@ footer img.foot-logo-lg {
 footer img.foot-logo-sm {
   display: block;
 }
-p {
+footer p {
   font-weight: 400;
   font-size: 14px;
   line-height: calc(20 / 14);
   color: #667085;
+}
+@media screen and (min-width: 500px) {
+  footer img.foot-logo-lg {
+    display: block;
+  }
+  footer img.foot-logo-sm {
+    display: none;
+  }
+  footer p {
+    font-size: 16px;
+    line-height: calc(24 / 16);
+  }
+  @media screen and (min-width: 700px) {
+    header {
+      padding: 64px 16px 0;
+      display: flex;
+      justify-content: center;
+    }
+    header > div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 24px;
+      position: relative;
+      width: 100%;
+      max-width: 736px;
+    }
+    header > div > button {
+      position: absolute;
+      top: -22.5px;
+      right: 0;
+      cursor: pointer;
+    }
+    #h-ic-mb {
+      display: none;
+    }
+    #h-ic-lg {
+      display: block;
+    }
+    header > div > button:hover .svg-bg {
+      fill: #F9FAFB;
+    }
+    #twitter {
+      font-size: 20px;
+      line-height: calc(30 / 20);
+    }
+    main {
+      padding: 56px 16px 88.55px;
+    }
+    #my_links > a {
+      height: 76px;
+      font-weight: 500;
+      font-size: 18px;
+      line-height: calc(28 / 18);
+    }
+    footer {
+      padding: 48px 16px;
+    }
+    footer > div {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 36px;
+    }
+  }
 }
