--- a/src/pages/css/contact.css
+++ b/src/pages/css/contact.css
@@ -76,6 +76,9 @@
 #contact-page form > div input:focus {
     border: 1px solid #84CAFF;
 }
+#contact-page form > div input.error {
+    border: 1px solid #F89687;
+}
 #contact-page form > div input {
     height: 44px;
     padding: 10px 14px;
@@ -88,6 +91,12 @@
 #contact-page form > div textarea:focus {
     border: 1px solid #84CAFF;
     box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #D1E9FF;
+}
+#contact-page form > div textarea.error {
+    border: 1px solid #F89687;
+}
+#contact-page form > div textarea.error:focus {
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #FFD3CC;
 }
 #contact-page form > div input, 
 #contact-page form > div input::placeholder,
