--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ html, body, header, main, footer {
   outline: none;
   border: none;
   background: transparent;
+  font-family: 'Inter', sans-serif;
 }
 button, a {
   cursor: pointer;
